--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -21,8 +21,9 @@
         @form.TextAreaFor(m => m.Description).input_col_md(6)
         @form.CheckBoxFor(m=>m.ForumPosts).CheckBoxFor(m=>m.Newsletter).CheckBoxFor(m=>m.BlogPosts)
         @form.CheckBoxFor(m => m.AcceptTerms).label_text("I have read and accepted the terms and conditions")
-        @form.StaticFor(m => m.Log)
-        @form.StaticFor(m => m.PhoneNumber, string.IsNullOrEmpty(Model.PhoneNumber)?"No Phone Number": null)
+        @form.StaticFor(m => m.Log)        
+        @form.StaticFor(m => m.PhoneNumber, string.IsNullOrEmpty(Model.PhoneNumber)?"No Phone Number": null)        
+        @form.TagFor(m=>m.Authorized, Html.f().Tag("p").AddTag(Html.f().Tag("span").AddCssClass("label").AddCssClass(Model.Authorized ? "label-success" : "label-danger").AddText(Model.Authorized ? "Yes" : "No")))       
         @form.Button(Html.f().Button("submit", "Submit").btn_primary()).Button(Html.f().Button("button", "Cancel"))
         @form.Button(Html.f().ActionLink("New", "new").Button()).Button(Html.f().ActionLink("Edit", "edit").Button()).Button(Html.f().ActionLink("Delete", "delete").Button())
         @form.Button(Html.f().Button("button","Delete").btn_danger().btn_block()).input_col_md(4)
