--- a/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
@@ -29,6 +29,7 @@
         @form.StaticFor(m => m.PhoneNumber, string.IsNullOrEmpty(Model.PhoneNumber) ? "No Phone Number" : null)
         @form.Link(Html.f().ActionLink("Link", "Row", "Grid"))
         @form.Link(Html.f().ActionLink("Link1", "Column", "Grid")).Link(Html.f().ActionLink("Link2", "Row", "Grid"))
+        @form.TagFor(m => m.Authorized, Html.f().Tag("p").AddTag(Html.f().Tag("span").AddCssClass("label").AddCssClass(Model.Authorized ? "label-success" : "label-danger").AddText(Model.Authorized ? "Yes" : "No")))
         @form.Button(Html.f().Button("submit", "Submit").btn_primary()).Button(Html.f().Button("button", "Cancel"))
         @form.Button(Html.f().ActionLink("New", "new").Button()).Button(Html.f().ActionLink("Edit", "edit").Button()).Button(Html.f().ActionLink("Delete", "delete").Button())
         @form.Button(Html.f().Button("button","Delete").btn_danger().btn_block())
